# bs-solctra-mpi-rs

./: Cargo.toml
src/: main.rs  point.rs  simulation.rs
