[package]
name = "bs-solctra-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.6"
log = "0.4.26"
mpi = "0.8.0"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }

[profile.relwithdebinfo]
inherits = "release"
debug = true
